--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "@reach/router": "^1.1.1",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
     "chart.js": "^2.7.2",
     "cors": "^2.8.4",
     "jquery": "^3.3.1",
