--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "chart.js": "^2.7.2",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "jquery": "^3.3.1",
     "knex": "^0.14.6",
