--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "@material-ui/icons": "^1.1.0",
     "@reach/router": "^1.1.1",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.0",
     "chart.js": "^2.7.2",
-    "cookie-session": "^2.0.0-beta.3",
-    "cors": "^2.8.4",
     "jquery": "^3.3.1",
     "knex": "^0.14.6",
     "nodemon": "^1.17.5",
-    "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
@@ -24,7 +20,19 @@
     "react-smooth-marquee": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-text-marquee": "^1.0.1",
-    "yarn": "^1.7.0"
+    "yarn": "^1.7.0",
+    "bcrypt": "^2.0.0",
+    "body-parser": "^1.18.3",
+    "cookie-session": "^1.3.2",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "js-sha256": "^0.9.0",
+    "knex": "^0.14.6",
+    "knex-logger": "^0.1.0",
+    "mongodb": "^3.1.0",
+    "pg": "^7.4.3",
+    "stripe": "^6.2.1"
   },
   "scripts": {
     "start": "cd express-api && (nodemon server.js &) && cd .. && react-scripts start",
