--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "react-smooth-marquee": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-text-marquee": "^1.0.1",
-    "yarn": "^1.7.0"
+    "yarn": "^1.7.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "js-sha256": "^0.9.0",
+    "knex-logger": "^0.1.0",
+    "stripe": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
