--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-smooth-marquee": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-text-marquee": "^1.0.1",
+    "mongodb": "^3.1.0",
     "yarn": "^1.7.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
